ui fix refactor: changes the inner container padding to account for the scrollbar width. the inner container at a 1440 width window is now correctly 1110px wide. refactor: changes all mobile breakpoints to 768px from 767px. refactor: changes the navbar menu font color to med gray. refactor: changes the welcome section margins to a pixel perfect implementation and smoothes the breakpoint behavior. refactor: fixes the mobile height of the hero image to 560px. feat: adds breakpoints to load appropriate image assets at certain window widths.

--- a/arch-studio/src/styles/main.css
+++ b/arch-studio/src/styles/main.css
@@ -99,11 +99,11 @@ h4 {
     position: relative;
     max-width: 1440px;
     width: 100%;
-    padding-inline: clamp(97px, 12vw, 165px) clamp(98px, 12vw, 165px);
+    padding-inline: clamp(97px, 12vw, 156.5px) clamp(98px, 12vw, 156.5px);
     overflow-x: hidden;
 }
 /*Project default element responsiveness*/
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     #inner-container {
         padding-inline: 0;
     }
@@ -140,7 +140,7 @@ h4 {
     margin: 0 0 0 6rem;
 }
 /*Page navigation label responsiveness*/
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .page-navigation-label {
         display: none;
         margin-left: unset;
@@ -176,6 +176,7 @@ h4 {
     line-height: 3.125rem;
     display: flex;
     align-items: center;
+    color: var(--color-med-grey);
 }
 .navbar-menu {
     box-shadow: unset;
@@ -184,7 +185,7 @@ h4 {
     padding: 0;
 }
 /*Navigation bar responsiveness*/
-@media (min-width: 768px) {
+@media (min-width: 769px) {
     .navbar-brand {
         margin-inline-start: unset !important; /*Override bulma*/
     }
@@ -202,7 +203,8 @@ h4 {
         display: none;
     }
 }
-@media (max-width: 767px) {
+
+@media (max-width: 768px) {
     .navbar {
         position: relative;
         padding-inline: 4rem;
@@ -349,20 +351,33 @@ h4 {
         margin-bottom: 248px;
     }
 }
-@media (max-width: 767px) {
+
+@media (max-width: 768px) {
     .hero {
         margin-bottom: 72px;
     }
     .hero-text {
-        margin-inline: unset;
+        margin: 116px 0 auto 0;
         padding-left: clamp(4rem, 6.25vw, 7.25rem);
-        max-height: 343px;
+        max-height: 334px;
         max-width: 343px;
     }
     .hero-text h2 {
         font-size: 6rem;
         letter-spacing: -1.2px;
         line-height: 6rem;
+    }
+
+    .hero-img {
+        display: block;
+        height: 560px;
+    }
+    
+}
+
+@media (max-width: 375px) {
+    #hero-img {
+        content: url("../assets/home/mobile/image-hero-paramour.jpg");
     }
 }
 @media (max-width: 1024px) {
@@ -390,7 +405,7 @@ h4 {
     z-index: 2;
     height: 483px;
     width: 446px;
-    margin: auto clamp(32px, 5vw, 125px) 0 auto;
+    margin: auto 125px 11px 188px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -400,7 +415,7 @@ h4 {
 }
 .welcome-title {
     position: absolute;
-    top: -74px;
+    top: -87px;
     font-size: clamp(25rem, 20vw, 250px);
     line-height: 25rem;
     letter-spacing: -5px;
@@ -411,7 +426,13 @@ h4 {
     height: 568px;
 }
 /*Home page intro responsiveness*/
-@media (min-width: 768px) and (max-width: 1150px) {
+@media (max-width: 1440px) {
+    .welcome-text {
+        margin-inline: auto;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1150px) {
     .intro {
         flex-direction: column;
         margin-bottom: 223px;
@@ -438,7 +459,8 @@ h4 {
         display: none;
     }
 }
-@media (max-width: 767px) {
+
+@media (max-width: 768px) {
     .intro {
         margin: 0 4rem 113px 4rem;
         min-height: 627px;
@@ -495,19 +517,30 @@ h4 {
     color: var(--color-white);
 }
 /*Home page about us responsiveness*/
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .about-us {
         margin-bottom: 73px;
     }
     .about-us .image-filter {
         width: fit-content;
     }
+
+    .about-us :is(.hero-text) {
+        margin-top: 181px;
+    }
     .about-us .hero-text :is(h3) {
         font-size: 6rem;
         line-height: 52px;
+        max-width: 240px;
     }
     .about-us .hero-text :is(a) {
         margin-top: 23px;
+    }
+}
+
+@media (max-width: 375px) {
+    #about-us-img {
+        content: url("../assets/home/mobile/image-small-team.jpg");
     }
 }
 /*Home page featured*/
@@ -569,16 +602,17 @@ h4 {
         right: 23px;
     }
     #featured-img-1 {
-        content: url(../assets/portfolio/tablet/image-del-sol.jpg);
+        content: url("../assets/portfolio/tablet/image-del-sol.jpg");
     }
     #featured-img-2 {
-        content: url(../assets/portfolio/tablet/image-228b.jpg);
+        content: url("../assets/portfolio/tablet/image-228b.jpg");
     }
     #featured-img-3 {
-        content: url(../assets/portfolio/tablet/image-prototype.jpg);
+        content: url("../assets/portfolio/tablet/image-prototype.jpg");
     }
 }
-@media (max-width: 767px) {
+
+@media (max-width: 768px) {
     .featured {
         position: relative;
         padding-inline: 32px;
@@ -592,6 +626,11 @@ h4 {
         line-height: 52px;
         letter-spacing: -1.71px;
     }
+
+    .featured-container :is(.hero-text) {
+        margin: 0 0 23px 24px;
+        padding: unset;
+    }
     #featured-button {
         position: absolute;
         bottom: -96px;
@@ -603,13 +642,13 @@ h4 {
         display: none;
     }
     #featured-img-1 {
-        content: url(../assets/portfolio/mobile/image-del-sol.jpg);
+        content: url("../assets/portfolio/mobile/image-del-sol.jpg");
     }
     #featured-img-2 {
-        content: url(../assets/portfolio/mobile/image-228b.jpg);
+        content: url("../assets/portfolio/mobile/image-228b.jpg");
     }
     #featured-img-3 {
-        content: url(../assets/portfolio/mobile/image-prototype.jpg);
+        content: url("../assets/portfolio/mobile/image-prototype.jpg");
     }
 }
 /*Footer*/
@@ -642,6 +681,7 @@ footer {
 .footer-menu :is(a) {
     margin: unset;
     font-weight: bold;
+    color: var(--color-med-grey);
 }
 .footer-body :is(.navbar-item) {
     padding: unset;
@@ -661,7 +701,6 @@ footer {
     .footer-logo {
         padding: 49px 32px 47px 32px;
         max-width: 120px;
-        max-width: 120px;
     }
     .footer-logo :is(svg) {
         width: 58px;
@@ -671,7 +710,8 @@ footer {
         padding: 0 0 0 clamp(40px, 3.5vw, 85px);
     }
 }
-@media (max-width: 767px) {
+
+@media (max-width: 768px) {
     :is(footer, .footer-body, .footer-menu) {
         flex-direction: column;
     }
